# rust-ipfs-api

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  README.tpl
.github/workflows/: rust.yml
ipfs-api/: Cargo.toml
ipfs-api-backend-actix/: Cargo.toml
ipfs-api-backend-actix/src/: backend.rs  error.rs  lib.rs
ipfs-api-backend-hyper/: Cargo.toml
ipfs-api-backend-hyper/src/: backend.rs  error.rs  lib.rs
ipfs-api-examples/: Cargo.toml
ipfs-api-examples/examples/: actix_custom_conn.rs  add_file.rs  add_file_piped_from_command.rs  add_tar.rs  app_error_enum.rs  basic_auth.rs  bootstrap_default.rs  cat.rs  check_file_local.rs  config.rs  dag.rs  default_config.json  dns.rs  get_commands.rs  get_stats.rs  get_swarm.rs  get_version.rs  log_tail.rs  mfs.rs  ping_peer.rs  pubsub.rs  replace_config.rs  resolve_name.rs
ipfs-api-examples/src/: lib.rs
ipfs-api-prelude/: Cargo.toml
ipfs-api-prelude/src/: api.rs  backend.rs  error.rs  from_uri.rs  global_opts.rs  header.rs  lib.rs  read.rs
ipfs-api-prelude/src/request/: add.rs  bitswap.rs  block.rs  cat.rs  config.rs  dag.rs  dht.rs  diag.rs  dns.rs  file.rs  files.rs  filestore.rs  get.rs  id.rs  key.rs  log.rs  ls.rs  mod.rs  name.rs  object.rs  pin.rs  ping.rs  pubsub.rs  refs.rs  shutdown.rs  stats.rs  swarm.rs  swarm_connect.rs  tar.rs  version.rs
ipfs-api-prelude/src/response/: bootstrap.rs  commands.rs  config.rs  dag.rs  diag.rs  error.rs  file.rs  files.rs  filestore.rs  id.rs  mod.rs  mount.rs  name.rs  object.rs  pin.rs  ping.rs  pubsub.rs  refs.rs  repo.rs  serde.rs  shutdown.rs  swarm_connect.rs  tar.rs
ipfs-api-prelude/src/response/tests/: v0_bitswap_stat_0.json  v0_commands_0.json  v0_dag_get_0.json  v0_file_ls_0.json  v0_file_ls_1.json  v0_files_stat_0.json  v0_id_0.json  v0_key_list_0.json  v0_key_rename_0.json  v0_log_ls_0.json  v0_ls_1.json  v0_name_resolve_0.json  v0_object_links_0.json  v0_pin_add_0.json  v0_ping_0.json  v0_ping_1.json  v0_pubsub_ls_0.json  v0_pubsub_ls_1.json  v0_pubsub_sub_0.json  v0_pubsub_sub_1.json  v0_refs_local_0.json  v0_repo_verify_0.json  v0_repo_version_0.json  v0_resolve_0.json  v0_swarm_connect_0.json  v0_swarm_peers_0.json  v0_swarm_peers_1.json  v0_tar_add_0.json  v0_version_1.json
ipfs-api-versions/: Cargo.toml
ipfs-api-versions/src/: lib.rs
ipfs-api/examples/: add_file.rs  add_tar.rs  bootstrap_default.rs  config.rs  dag.rs  dns.rs  get_commands.rs  get_stats.rs  get_swarm.rs  get_version.rs  log_tail.rs  mfs.rs  ping_peer.rs  pubsub.rs  replace_config.rs  resolve_name.rs  server.rs
ipfs-api/src/: client.rs  form.rs  header.rs  lib.rs  multipart.rs  read.rs
ipfs-api/src/client/: from_uri.rs  internal.rs  mod.rs
ipfs-api/src/request/: add.rs  bitswap.rs  block.rs  bootstrap.rs  cat.rs  commands.rs  config.rs  dag.rs  dht.rs  diag.rs  dns.rs  file.rs  files.rs  filestore.rs  get.rs  id.rs  key.rs  log.rs  ls.rs  mod.rs  name.rs  object.rs  pin.rs  ping.rs  pubsub.rs  refs.rs  shutdown.rs  stats.rs  swarm.rs  tar.rs  version.rs
ipfs-api/src/response/: add.rs  bitswap.rs  block.rs  bootstrap.rs  cat.rs  commands.rs  config.rs  dag.rs  dht.rs  diag.rs  dns.rs  error.rs  file.rs  files.rs  filestore.rs  get.rs  id.rs  key.rs  log.rs  ls.rs  mod.rs  mount.rs  name.rs  object.rs  pin.rs  ping.rs  pubsub.rs  refs.rs  repo.rs  resolve.rs  serde.rs  stats.rs  swarm.rs  tar.rs  version.rs
ipfs-api/src/response/tests/: v0_block_stat_0.json  v0_bootstrap_list_0.json  v0_key_rm_0.json  v0_ls_0.json  v0_mount_0.json  v0_pin_ls_0.json  v0_ping_2.json  v0_pubsub_sub_1.json  v0_repo_gc_0.json  v0_repo_verify_1.json  v0_swarm_peers_2.json
ipfs-api/tests/: test_backend.rs  test_basic_auth.rs  test_get_version.rs
ipfs-api/tests/test_support/: client.rs  container.rs  default-template.conf  errors.rs  images.rs  lib.rs  resources.rs  rt.rs
ipfs-cli/: Cargo.toml
ipfs-cli/src/: main.rs
ipfs-cli/src/command/: add.rs  bitswap.rs  block.rs  bootstrap.rs  cat.rs  commands.rs  config.rs  dag.rs  dht.rs  diag.rs  dns.rs  file.rs  files.rs  filestore.rs  mod.rs  shutdown.rs  version.rs
src/: client.rs  lib.rs
src/request/: version.rs
src/response/: bitswap.rs  block.rs  bootstrap.rs  commands.rs  config.rs  dag.rs  dht.rs  dns.rs  error.rs  file.rs  files.rs  filestore.rs  get.rs  id.rs  key.rs  log.rs  ls.rs  mod.rs  mount.rs  name.rs  object.rs  pin.rs  pubsub.rs  repo.rs  resolve.rs  serde.rs  stats.rs  swarm.rs  version.rs
src/response/tests/: v0_files_ls_0.json  v0_id_0.json  v0_key_gen_0.json  v0_object_diff_0.json  v0_object_stat_0.json  v0_pubsub_peers_0.json  v0_repo_stat_0.json  v0_stats_bw_0.json  v0_swarm_addrs_local_0.json  v0_version_0.json
