[workspace]
resolver = "2"

members = [
  "ipfs-api",
  "ipfs-api-backend-actix",
  "ipfs-api-backend-hyper",
  "ipfs-api-examples",
  "ipfs-api-prelude",
  "ipfs-api-versions",
]

[patch.crates-io]
common-multipart-rfc7578  = { git = "https://github.com/miraclx/rust-multipart-rfc7578", branch = "relax-sync-requirement" }
hyper-multipart-rfc7578  = { git = "https://github.com/miraclx/rust-multipart-rfc7578", branch = "relax-sync-requirement" }
actix-multipart-rfc7578  = { git = "https://github.com/miraclx/rust-multipart-rfc7578", branch = "relax-sync-requirement" }
