[package]
name                      = "ipfs-api-backend-actix"
description               = "Actix implementation of IPFS HTTP API"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
edition                   = "2018"
documentation             = "https://docs.rs/ipfs-api"
repository                = "https://github.com/ferristseng/rust-ipfs-api"
keywords                  = ["ipfs"]
categories                = ["filesystem", "web-programming"]
version                   = "0.1.0"
readme                    = "../README.md"
license                   = "MIT OR Apache-2.0"

[dependencies]
actix-http                = "2.2"
actix-multipart-rfc7578   = "0.4"
awc                       = "2.0"
async-trait               = "0.1"
bytes                     = "1.0"
futures                   = "0.3"
http                      = "0.2"
ipfs-api-prelude          = { version = "0.1.0", path = "../ipfs-api-prelude" }
serde                     = { version = "1.0", features = ["derive"] }
serde_json                = "1.0"
serde_urlencoded          = "0.7"
thiserror                 = "1.0"
