[package]
name                      = "ipfs-api-backend-hyper"
description               = "Hyper implementation of IPFS HTTP API"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
edition                   = "2021"
documentation             = "https://docs.rs/ipfs-api"
repository                = "https://github.com/ferristseng/rust-ipfs-api"
keywords                  = ["ipfs"]
categories                = ["filesystem", "web-programming"]
version                   = "0.6.0"
readme                    = "../README.md"
license                   = "MIT OR Apache-2.0"

[badges]
github                    = { repository = "ferristseng/rust-ipfs-api", workflow = "Rust" }
maintenance               = { status = "passively-maintained" }

[features]
with-builder              = ["ipfs-api-prelude/with-builder"]
with-hyper-tls            = ["hyper-tls"]
with-hyper-rustls         = ["hyper-rustls"]
with-send-sync            = ["ipfs-api-prelude/with-send-sync"]

[dependencies]
async-trait               = "0.1"
base64                    = "0.13"
bytes                     = "1"
futures                   = "0.3"
http                      = "0.2"
hyper                     = { version = "0.14", features = ["http1", "http2", "client", "tcp"] }
hyper-multipart-rfc7578   = "0.8"
hyper-rustls              = { version = "0.23", features = ["rustls-native-certs"], optional = true }
hyper-tls                 = { version = "0.5", optional = true }
ipfs-api-prelude          = { version = "0.6", path = "../ipfs-api-prelude" }
thiserror                 = "1"
