[package]
name                      = "ipfs-api-examples"
description               = "Examples for IPFS HTTP API clients"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
edition                   = "2021"
documentation             = "https://docs.rs/ipfs-api"
repository                = "https://github.com/ferristseng/rust-ipfs-api"
keywords                  = ["ipfs"]
categories                = ["filesystem", "web-programming"]
version                   = "0.5.0"
readme                    = "../README.md"
license                   = "MIT OR Apache-2.0"

[badges]
github                    = { repository = "ferristseng/rust-ipfs-api", workflow = "Rust" }
maintenance               = { status = "passively-maintained" }

[features]
default                   = ["with-hyper"]
with-hyper                = ["ipfs-api-backend-hyper", "tokio/macros", "tokio/rt-multi-thread"]
with-actix                = ["ipfs-api-backend-actix", "actix-rt"]

[dependencies]
actix-rt                  = { version = "2.6", optional = true }
futures                   = "0.3"
ipfs-api-backend-actix    = { version = "0.6", path = "../ipfs-api-backend-actix", optional = true }
ipfs-api-backend-hyper    = { version = "0.5", path = "../ipfs-api-backend-hyper", optional = true }
tar                       = "0.4"
tokio                     = { version = "1", features = ["time"] }
tokio-stream              = { version = "0.1", features = ["time"] }
tracing-subscriber        = { version = "0.3", features = ["fmt"] }
