[package]
description               = "Test support crate defining which IPFS versions are tested against"
edition                   = "2021"
license                   = "MIT OR Apache-2.0"
name                      = "ipfs-api-versions"
documentation             = "https://docs.rs/ipfs-api"
readme                    = "../README.md"
repository                = "https://github.com/ferristseng/rust-ipfs-api"
version                   = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
test-case = "3.1"
