[package]
name                      = "ipfs-api"
description               = "Implementation of an IPFS HTTP API client"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
edition                   = "2018"
documentation             = "https://docs.rs/ipfs-api"
repository                = "https://github.com/ferristseng/rust-ipfs-api"
keywords                  = ["ipfs"]
categories                = ["filesystem", "web-programming"]
version                   = "0.14.0"
readme                    = "../README.md"
license                   = "MIT OR Apache-2.0"

[badges]
github                    = { repository = "ferristseng/rust-ipfs-api", workflow = "Rust" }
maintenance               = { status = "passively-maintained" }

[features]
default                   = ["with-hyper", "with-builder"]
with-hyper-tls            = ["with-hyper", "ipfs-api-backend-hyper/with-hyper-tls"]
with-hyper-rustls         = ["with-hyper", "ipfs-api-backend-hyper/with-hyper-rustls"]
with-hyper                = ["ipfs-api-backend-hyper"]
with-actix                = ["ipfs-api-backend-actix"]
with-builder              = ["ipfs-api-prelude/with-builder"]
# Old features, kept for compatibility
actix                     = ["with-actix"]
builder                   = ["with-builder"]

[dependencies]
ipfs-api-prelude          = { version = "0.3", path = "../ipfs-api-prelude" }
ipfs-api-backend-actix    = { version = "0.4", path = "../ipfs-api-backend-actix", optional = true }
ipfs-api-backend-hyper    = { version = "0.3", path = "../ipfs-api-backend-hyper", optional = true }

[dev-dependencies]
actix-rt                  = "2.5"
futures                   = "0.3"
tokio                     = { version = "1", features = ["rt-multi-thread", "macros"] }
