[package]
name                      = "ipfs-api"
description               = "Implementation of an IPFS HTTP API client"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
edition                   = "2021"
documentation             = "https://docs.rs/ipfs-api"
repository                = "https://github.com/ferristseng/rust-ipfs-api"
keywords                  = ["ipfs"]
categories                = ["filesystem", "web-programming"]
version                   = "0.17.0"
readme                    = "../README.md"
license                   = "MIT OR Apache-2.0"

[badges]
github                    = { repository = "ferristseng/rust-ipfs-api", workflow = "Rust" }
maintenance               = { status = "deprecated" }

[features]
default                   = ["with-hyper"]
with-hyper-tls            = ["with-hyper", "ipfs-api-backend-hyper/with-hyper-tls"]
with-hyper-rustls         = ["with-hyper", "ipfs-api-backend-hyper/with-hyper-rustls"]
with-hyper                = ["ipfs-api-backend-hyper", "ipfs-api-backend-hyper/with-builder"]
with-actix                = ["ipfs-api-backend-actix", "ipfs-api-backend-actix/with-builder"]

[dependencies]
ipfs-api-backend-actix    = { version = "0.7", path = "../ipfs-api-backend-actix", optional = true }
ipfs-api-backend-hyper    = { version = "0.6", path = "../ipfs-api-backend-hyper", optional = true }

[dev-dependencies]
actix-rt                  = "2.5"
cfg-if                    = "1"
futures                   = "0.3"
ipfs-api-versions         = { version = "0.1", path = "../ipfs-api-versions" }
passivized_docker_engine_client = "0.0.6"
passivized_htpasswd       = "0.0.3"
reqwest                   = "0.11"
tempfile                  = "3.3"
test-case                 = "2.2"
thiserror                 = "1.0"
tokio                     = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }

# Only when testing with-hyper
hyper                     = "0.14"

# Only when testing with-hyper-tls
hyper-tls                 = "0.5"
