[package]
name                      = "ipfs-cli"
description               + "A CLI to interact with IPFS"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
repository                = "https://github.com/ferristseng/rust-ipfs-api"
version                   = "0.4.0"
readme                    = "../README.md"
license                   = "MIT OR Apache-2.0"

[dependencies]
clap                      = "2.27"
futures                   = "0.1"
ipfs-api                  = { path = "../ipfs-api" }
tokio-core                = "0.1"
