[package]
name                      = "ipfs-cli"
description               = "A CLI to interact with IPFS"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
edition                   = "2018"
repository                = "https://github.com/ferristseng/rust-ipfs-api"
version                   = "0.4.1"
readme                    = "../README.md"
license                   = "MIT OR Apache-2.0"

[dependencies]
clap                      = "2.33.0"
futures                   = "0.1.29"
hyper                     = "0.12.35"
ipfs-api                  = { path = "../ipfs-api" }
